--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -6,23 +6,24 @@
   Tags
 */
 aside {
-  background: linear-gradient(
-    var(--light-accent), 
-    var(--circle-color), 
-    var(--dark-accent)
-  );
+  background: linear-gradient(var(--light-accent),
+      var(--circle-color),
+      var(--dark-accent));
   clip-path: circle(20rem at center);
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 50%;
+  float: left;
+  height: 100%;
 }
 
-aside, 
+aside,
 section {
   flex: 1 1 50%;
 }
 
-aside > h2 {
+aside>h2 {
   font-size: 4rem;
   color: white;
   text-shadow: 1px 1px 1px var(--dark-accent);
@@ -34,7 +35,7 @@ form {
   position: relative;
 }
 
-form > *:not(label) {
+form>*:not(label) {
   margin: 1rem 0;
   padding: 0.5rem;
 }
@@ -85,7 +86,7 @@ section {
   Classes
 */
 .dark section {
-  border-left: solid .5rem var(--disabled);
+  border-left: solid .5rem var(--dark-accent);
 }
 
 /*
